# EnhancedDueDiligence

./: application_code_documentation.md  main.py  pyproject.toml  replit.nix
attached_assets/: FinCrime_Case_Management_UI_Structure.xlsx  Pasted-Based-on-the-following-5-examples-create-an-Enhanced-Customer-Due-Diligence-ECDD-Generator-softwa-1735015012388.txt  Pasted-Skip-to-main-content-Secondary-navigation-Careers-Contact-us-AUSTRAC-Online-Subscribe-to-InBrie-1735016427936.txt  Pasted-The-following-factor-may-change-based-on-the-cases-Suspicion-type-Offence-against-a-Commonwealth--1735016089825.txt  Project Pitch STRICTG.docx  Project StriCTG Proposal.docx  StrikeAI Proposal Draft.docx  UX Project StrikeAI.docx  Work Plan and Instructions for Product Development Team.docx
utils/: ai_analyzer.py  data_processor.py  ocr_processor.py  report_generator.py  risk_visualization.py  templates.py  training_module.py  transaction_monitor.py  visualization.py
