[project]
name = "repl-nix-enhancedduediligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "opencv-python-headless>=4.10.0.84",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "streamlit>=1.41.1",
]
