[project]
name = "repl-nix-enhancedduediligence"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.1",
    "openai>=1.58.1",
    "opencv-python>=4.10.0.84",
    "opencv-python-headless>=4.10.0.84",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "plotly>=5.24.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "streamlit>=1.41.1",
]
